...
            // Strategy: We can't access `TheraScreenTimeManager` here.
            // We must read `DistractingSelection` from UserDefaults (App Group).
            // Then remove THIS token.
            // Then save back?
            
            // Simplified: We allow the app.
            // ShieldAction doesn't have an "Allow" response like .permit?
            // Wait, standard Family Control has "Ask For Time".
            // For custom shield handling:
            // We must mutate the Store.
            
            completionHandler(.none)
            
...
